pidgin/css/pidgin.css
/* ... */
body > footer .social-menu ul li a {
    color: #ADFF00;
}

body > footer .social-menu ul li a:hover:before {
    background-color:#FF9CFF;
}

body > footer a, body > footer p a {
    color: #ADFF00;
}

body > footer a:hover, body > footer p a:hover {
    color:#FF9CFF;
}

body > footer .search {
    width: 100%;
    grid-area: search;
    margin-top: 1.5em;
}

body > footer .search form {
    display: flex;
}

body > footer .search input:nth-of-type(1) {
    width: 90%;
    padding: .6em 1.5em;

    font-family: "DM Sans";
    font-size: 1.2em;
    border: none;
    border-radius: 60px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0; 
}

body > footer .search input:nth-of-type(2), body > footer .search button {
    
    border: none;
    border-radius: 60px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;

    /* --icon-sprite-color: white; */
    /* background: white; */
    /* width: 1em; */
    /* height: 100%; */
    background: white;
    /* text-indent: 1000px; */
    color: white;
    /* overflow: hidden; */
    position: relative;
    cursor: pointer;
}

body > footer .search input:nth-of-type(2), body > footer .search button:before {
    top: 35%;
    right: 1.5em;
    position: absolute;
    transform: scaleX(-1);
}


body > footer .subscribe {
    grid-area: subscribe;
    padding: 2.5em .5em .5em .5em;
    width: 90%;
    height: 60%;
    margin-left: 5%;
    

    font-family: "DM Sans";
    background: white;
    border-radius: 15px;
    text-align: center;

    color: black;
}

body > footer .subscribe h2 {
    margin-bottom: 1.5em;

    font-family: "DM Sans";
}

body > footer .subscribe a {
    padding: .8em 1.8em;
    
    font-family: "DM Sans";
    font-weight: 700;
    font-size: 1.2em;
    color: black;
    background:#ADFF00;
    border-radius: 60px;
}

body > footer .subscribe a:hover {

    background: black;
    color: white;
}

body > footer .license {
    text-align: center;
    width: 60%;
    justify-content: center;
    margin: 0 auto;
    display: grid;
    grid-template-columns: 1fr 1fr 18fr;
}

body > footer .license svg {
    /* width: 1.5em;
    height: 1.5em; */
}


body > footer .license p {
    margin-top: 0;
    margin-left: .5em;

    font-family: "DM Mono";
    font-size: .8em;
    text-align: left;
}

body > footer .license p a:hover {
    color:#FF9CFF;
}




article.topic-summary a {
    --underline-background-color: black;

    padding: .8em 1.8em;
    
    font-family: "DM Sans";
    font-weight: 700;
    font-size: 1.2em;
    color: white;
    background:black;
    border-radius: 60px;
    text-transform: capitalize;
}

article.topic-summary a:hover {
    --underline-background-color: white;
    background: white;
    color: black;
    box-sizing: border-box;

    border: 4px solid black;
    padding: .6em 1.6em;
}

article.topic-summary.focus-area {
    grid-column: 2 / 11;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

article.topic-summary.focus-area:nth-of-type(even) figure {
    order: -1;
}

article.topic-summary.focus-area a {
    /* --underline-background-color: #2E1FB8;
    background:#2E1FB8;
    color: white; */

    /* --underline-background-color: #ADFF00;
    background:#ADFF00;
    color: black; */
}



article:nth-child(3n + 2 of .topic-summary.focus-area) a {
    --underline-background-color: #2E1FB8;
    background:#2E1FB8;
    color: white;
}

article:nth-child(3n + 3 of .topic-summary.focus-area) a {
    --underline-background-color: #FF9CFF;
    background:#FF9CFF;
    color: black;
}

article:nth-child(3n + 1 of .topic-summary.focus-area) a {
    --underline-background-color: #ADFF00;
    background:#ADFF00;
    color: black;
}







body main article.topic-summary.intro {
    display: flex;
    grid-column: 2 / 11;

}

body main article.topic-wummary.intro .description {
    width: 2fr;
}

body main article.topic-summary.intro h2 {
    font-family: "DM Sans";
    font-size: 3.6em;
    /* width: 8em; */
    margin-top: 45%;
    margin-left: 5%;
   
}


body main article.topic-summary.intro figure {
    /* display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr; */
    position: relative;
    /* width: 100%; */
    /* height: 85vw; */
    z-index: -1;
}


body main article.topic-summary.intro figure img.photo {
    /* grid-column: 1 / 10;
    grid-row: 1 / 4; */
    margin-left: -2em;
    /* width: 100%; */
    object-fit: cover;



    mask-image: url('../svg/blob2.svg');
    mask-repeat: no-repeat;
    mask-position: top center;
    mask-size: 86% 100%;

    transition: .2s ease-in;
    margin-top: 2.5em;
}

body main article.topic-summary.intro figure img:hover {
    /* mask-size: 1000% 1000%; */
}

/* body main article.topic-summary.intro figure svg {
    width: 100%;
} */

body main article.topic-summary.intro figure img.shape1 {
   /* grid-column: 1 / 2;
   grid-row: 1 / 4; */
   width: 30%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 10;
}

body main article.topic-summary.intro figure img.shape2 {
   /* grid-column: 5 / 9;
   grid-row: 1; */

   width: 40%;
   position: absolute;
   bottom: 5%;
   right: 0;
   z-index: -10;
}

body main article.topic-summary.intro figure img.shape3 {
   /* grid-column: 5 / 9;
   grid-row: 1; */

   width: 66%;
   position: absolute;
   top: -10%;
   right: 0;
   z-index: 5;
}









.posts > h2 {
    font-family: "DM Sans";
}

.posts .post h2, .posts .post h3 {
    font-family: "DM Sans";
}


.post a {
    font-weight: 600;
}

.post .categories {
    font-family: "DM Mono";
}

.post .categories a {
    font-weight: 500;
}


.posts .post .byline {
    font-weight: 600;
}

.posts .post p {
    margin-top: 1em;

    font-size: 1.3em;
    line-height: 1.2;
}

.posts .post .byline {
    font-size: 1.2em;
    font-weight: 500;
}

.posts .post .byline a {
    font-family: "DM Sans";
    color: #2E1FB8;
}


.home-narrative article.posts {
    grid-column: 2/11;
}
/* ... */

